JSW Devsb/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Depot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Trade Customer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_assignment_Group__c</fullName>
        <label>Account assignment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Data__c</fullName>
        <label>Additional Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advances__c</fullName>
        <label>Advances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anniversary__c</fullName>
        <label>Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIN_DETAILS__c</fullName>
        <label>CIN DETAILS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST__c</fullName>
        <label>CST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_form_Value__c</fullName>
        <label>C form Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpet_Area_Sqft__c</fullName>
        <label>Carpet Area (Sqft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_bounce_history_with_penalty__c</fullName>
        <label>Cheque bounce history with penalty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_Data__c</fullName>
        <label>Company Code Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Person_1__c</fullName>
        <label>Contact Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_2__c</fullName>
        <label>Contact Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Available__c</fullName>
        <label>Credit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Control_Area__c</fullName>
        <label>Credit Control Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Ctrl_Area__c</fullName>
        <label>Credit Ctrl Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Last_Updated_Formula__c</fullName>
        <formula>Credit_Last_Updated__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Last_Updated__c</fullName>
        <label>Credit Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Outstanding_Positive__c</fullName>
        <formula>IF( Credit_Outstanding__c &gt; 0 ,Credit_Outstanding__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Outstanding (Positive)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Outstanding__c</fullName>
        <label>Credit Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Profile_Date__c</fullName>
        <label>Credit Profile Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_enhancement_request_status__c</fullName>
        <label>Credit enhancement request status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credited_On_Formula__c</fullName>
        <formula>Credited_On__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credited On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credited_On__c</fullName>
        <label>Credited On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Month_Sale__c</fullName>
        <label>Current Month Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Outstanding__c</fullName>
        <label>Current Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_discount_eligibility__c</fullName>
        <label>Current discount eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Stas_Grp__c</fullName>
        <label>Cust Stas  Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1__c</fullName>
        <label>Customer Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2__c</fullName>
        <label>Customer Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_3__c</fullName>
        <label>Customer Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Pricing_Proc__c</fullName>
        <label>Customer Pricing Proc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_grp2__c</fullName>
        <label>Customer grp2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_grp3__c</fullName>
        <label>Customer grp3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custumer_grp1__c</fullName>
        <label>Custumer grp1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_payment_to_dealer__c</fullName>
        <label>Discount payment to dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_scheme__c</fullName>
        <label>Discount scheme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Descrption__c</fullName>
        <formula>CASE (Distribution_Channel__c,
&quot;10&quot;, &quot;Trade&quot; ,
&quot;20&quot;, &quot;Non-Trade&quot;, 
&quot;30&quot;, &quot;Stock Transfer&quot;, 
&quot;40&quot;, &quot;Third Party&quot;,
&quot;50&quot;, &quot;SEZ&quot;,
&quot;60&quot;, &quot;Consignment Transfer&quot;,
&quot;70&quot;, &quot;Inter Unit Transfer&quot;,
&quot;80&quot;, &quot;Export Sales&quot;,
&quot;none&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Districtt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DivAndDC__c</fullName>
        <label>DivAndDC</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DivistionDesc__c</fullName>
        <formula>CASE( TEXT(Division__c),&quot;50&quot;, &quot;Cement&quot;,&quot;51&quot;, &quot;Clinker&quot;,&quot;52&quot;, &quot;GGBS&quot;,&quot;53&quot;, &quot;Trading&quot;,&quot;54&quot;, &quot;MISC&quot; ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DivistionDesc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecc_No__c</fullName>
        <label>Ecc No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Credit_Period__c</fullName>
        <label>Eligible Credit Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excise_Registration__c</fullName>
        <label>Excise Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive JSW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_in_volume_to_next_slab__c</fullName>
        <label>Gap in volume to next slab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ideal_Storage_Capacity_MT__c</fullName>
        <label>Ideal Storage Capacity (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incoterms1__c</fullName>
        <label>Incoterms1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <label>Incoterms2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Date_Time__c</fullName>
        <label>Interface Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Month_Sale__c</fullName>
        <label>Last Month Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Year_Same_Month_Sale__c</fullName>
        <label>Last Year Same Month Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_payment_processed__c</fullName>
        <label>Last payment processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lst_Number__c</fullName>
        <label>Lst Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAVAT__c</fullName>
        <label>MAVAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_to_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail to SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1__c</fullName>
        <label>Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2__c</fullName>
        <label>Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3__c</fullName>
        <label>Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Outstanding__c</fullName>
        <label>Net Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Bill_Doc_Credit__c</fullName>
        <label>Open Bill Doc Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Order_Credit__c</fullName>
        <label>Open Order Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_delivery_Credit__c</fullName>
        <label>Open delivery Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutStanding_Amt__c</fullName>
        <label>OutStanding Amt Aging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstandning_Date__c</fullName>
        <label>Outstandning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount__c</fullName>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAN__c</fullName>
        <label>PAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Type__c</fullName>
        <label>Packing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Account_No__c</fullName>
        <label>Prev Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Credit_Limit__c</fullName>
        <label>Previous Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Risk_Category__c</fullName>
        <label>Previous Risk Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Account__c</fullName>
        <label>Recon Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Percentage__c</fullName>
        <label>Retail Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rich__c</fullName>
        <label>Rich</label>
        <length>131051</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD__c</fullName>
        <label>SD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSD__c</fullName>
        <label>SSD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATE_DEC__c</fullName>
        <label>STATE TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_TEXT__c</fullName>
        <label>STATE TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <label>Sales Area Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_text__c</fullName>
        <label>Sales District text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Code__c</fullName>
        <label>Sales Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Employee</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group_text__c</fullName>
        <label>Sales Group text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_text__c</fullName>
        <label>Sales Office text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <label>Search Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party_Code__c</fullName>
        <label>Ship To Party Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party_Nmae__c</fullName>
        <label>Ship To Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>CASE( (Region__c), &quot;36&quot;, &quot;Telangana&quot;, &quot;32&quot;, &quot;Pondicherry&quot;, &quot;25&quot;, &quot;West-Bengal&quot;, &quot;24&quot;, &quot;Uttar-Pradesh&quot;, &quot;22&quot;, &quot;Tamilnadu&quot;, &quot;20&quot;, &quot;Rajastan&quot;, &quot;18&quot;, &quot;Orissa&quot;, &quot;13&quot;, &quot;Maharastra&quot;, &quot;11&quot;, &quot;Kerala&quot;, &quot;10&quot;, &quot;Karnataka&quot;, &quot;06&quot;, &quot;Gujarat&quot;, &quot;05&quot;, &quot;Goa&quot;, &quot;01&quot;, &quot;Andhra-Pradesh&quot;, &quot;Others&quot;)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_from__c</fullName>
        <label>Supply from</label>
        <picklist>
            <picklistValues>
                <fullName>Depot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <label>TIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number__c</fullName>
        <label>Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payments__c</fullName>
        <label>Terms of Payments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Potential__c</fullName>
        <label>Total Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recievables__c</fullName>
        <label>Total Recievables</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Products__c</fullName>
        <label>Type of Products</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Up_To_Formula__c</fullName>
        <formula>Valid_Up_To__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Up To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Up_To__c</fullName>
        <label>Valid Up To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WS_vs_Retail__c</fullName>
        <label>Wholesale Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X008_015__c</fullName>
        <label>008 - 015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X016_030__c</fullName>
        <label>016 - 030</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X031_045__c</fullName>
        <label>031 - 045</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X365__c</fullName>
        <label>&gt; 365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YCST__c</fullName>
        <label>YCST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP__c</fullName>
        <label>YP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS__c</fullName>
        <label>YS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YVAT__c</fullName>
        <label>YVAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCST__c</fullName>
        <label>ZCST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZSER__c</fullName>
        <label>ZSER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZVAT__c</fullName>
        <label>ZVAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Customer_Code__c</columns>
        <columns>External_ID__c</columns>
        <columns>Distribution_Channel_Descrption__c</columns>
        <columns>Distribution_Channel__c</columns>
        <columns>Division__c</columns>
        <columns>DivistionDesc__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Sales_Office__c</columns>
        <columns>Sales_Office_text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Credit_Limit__c</columns>
        <columns>SD__c</columns>
        <columns>SSD__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Portal_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Customer_Code__c</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.IS_CUSTOMERSUCCESS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Portal Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Dealer_Community</fullName>
        <active>true</active>
        <label>Dealer Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depot</fullName>
        <active>true</active>
        <label>Depot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Trade</fullName>
        <active>true</active>
        <label>Non-Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade</fullName>
        <active>true</active>
        <label>Trade</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Default_Value_Company_Code</fullName>
        <active>true</active>
        <errorConditionFormula>Company_Code__c  &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Company_Code__c</errorDisplayField>
        <errorMessage>Company Code Default Value is 3000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Default_Value_Sales_Org</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE( Sales_Org__c )   &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Sales_Org__c</errorDisplayField>
        <errorMessage>Sales Org Default Value is 3000</errorMessage>
    </validationRules>
</CustomObject>